--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
+
+<html lang="en">
+
+<head>
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
+    <link rel="stylesheet" href="style.css">
+
+    <title>Phaktionz Development Application</title>
+</head>
+
+<body bgcolor="black">
+
+<!--NAV-->
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="https://github.com/Mustafif/Phaktionz/raw/main/Dev%20Plans/Plan/Plan.pdf">Dev Plans</a></li>
+    <li><a href="https://github.com/Mustafif/Phaktionz/raw/main/Story/Characters/Characters.pdf">Profiles</a></li>
+    <li><a href="https://github.com/Mustafif/Phaktionz/raw/main/Story/Concepts/Concepts.pdf">Concepts</a></li>
+    <li><a href="story.html">Story</a></li>
+
+    
+</ul>
+<!--NAV-->
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+
+    <!--<div class="w3-display-topleft w3-padding-large w3-xlarge">
+        <img src="Images/logo.png" alt="Logo">
+
+    </div>-->
+
+</div>
+
+<div class="w3-display-middle">
+
+    <h1 class="w3-jumbo w3-animate-top" align="center">Phaktionz <br> Development Plan</h1>
+
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+
+    <!--<h2  class="w3-large w3-center" style="font-size: xx-large">The Battlefield Rises Upon Us!</h2>-->
+    <h2>The Battlefield Rises Upon Us!</h2>
+
+</div>
+
+</body>
+
 </html>
+
